tests: posix: temporarily exclude two platforms failing in CI
Two platforms are failing posix tests. One is a known issue with a fix in
review (mps2/an385 userspace), and the other is an issue with
qemu_arc/qemu_arc_hs5x encountering an invalid instruction and crashing.

Signed-off-by: Chris Friedt <cfriedt@tenstorrent.com>

--- a/tests/posix/common/testcase.yaml
+++ b/tests/posix/common/testcase.yaml
@@ -70,6 +70,9 @@ tests:
       - CONFIG_THREAD_STACK_INFO=n
   portability.posix.common.userspace:
     filter: CONFIG_ARCH_HAS_USERSPACE
+    # Excluded while #96602 is in review
+    platform_exclude:
+      - mps2/an385
     tags:
       - userspace
     extra_configs:
