boards: nxp: Convert zephyr_compile_definitions
Either convert zephyr_compile_definitions directly in the
board directory to zephyr_library_compile_definitions or
move those definitions into the soc directory and convert
there.

Signed-off-by: Daniel Schultz <d.schultz@phytec.de>

--- a/soc/nxp/imxrt/imxrt10xx/CMakeLists.txt
+++ b/soc/nxp/imxrt/imxrt10xx/CMakeLists.txt
@@ -6,6 +6,17 @@
 
 zephyr_sources(soc.c)
 
+if(CONFIG_NXP_IMXRT_BOOT_HEADER)
+  if(CONFIG_BOOT_FLEXSPI_NOR)
+    zephyr_library_compile_definitions(XIP_BOOT_HEADER_ENABLE=1)
+    zephyr_library_compile_definitions(BOARD_FLASH_SIZE=CONFIG_FLASH_SIZE*1024)
+  endif()
+
+  if(CONFIG_DEVICE_CONFIGURATION_DATA)
+    zephyr_library_compile_definitions(XIP_BOOT_HEADER_DCD_ENABLE=1)
+  endif()
+endif()
+
 if(CONFIG_PM)
   zephyr_sources(power.c)
   zephyr_code_relocate(FILES power.c LOCATION ITCM_TEXT)
