--- a/soc/nxp/imxrt/imxrt11xx/CMakeLists.txt
+++ b/soc/nxp/imxrt/imxrt11xx/CMakeLists.txt
@@ -9,6 +9,17 @@ zephyr_sources_ifdef(CONFIG_PM power.c)
 
 zephyr_include_directories(.)
 
+if(CONFIG_NXP_IMXRT_BOOT_HEADER)
+  if(CONFIG_BOOT_FLEXSPI_NOR)
+    zephyr_library_compile_definitions(XIP_BOOT_HEADER_ENABLE=1)
+    zephyr_library_compile_definitions(BOARD_FLASH_SIZE=CONFIG_FLASH_SIZE*1024)
+  endif()
+
+  if(CONFIG_DEVICE_CONFIGURATION_DATA)
+    zephyr_library_compile_definitions(XIP_BOOT_HEADER_DCD_ENABLE=1)
+  endif()
+endif()
+
 if(CONFIG_MEMC_MCUX_FLEXSPI)
   zephyr_sources(flexspi.c)
   if(CONFIG_FLASH_MCUX_FLEXSPI_XIP)
