drivers : mbox : add mbox support for am261x
add ti,am26x-mbox support
add mailbox definition in am261x dts files

The Client ID that TI-MCU-PLUS-SDK uses is not directly implemented in
the mbox_send API, to keep it generic. Application is expected to parse
the message data with the expected client ID.

Note for the SDK vs Zephyr Mappings :
  - Zephyr MBOX channels are mapped between cores, and they are
    one-to-one mapped to the sw-queues in the mbox-sram, that matches to
    the SDK version of IPC-notify-configs.

Signed-off-by: Mihira Madhava Bollapragada <madhava@ti.com>

--- a/drivers/mbox/Kconfig
+++ b/drivers/mbox/Kconfig
@@ -27,6 +27,8 @@ source "drivers/mbox/Kconfig.ti_omap"
 source "drivers/mbox/Kconfig.renesas_rz"
 source "drivers/mbox/Kconfig.mhuv3"
 source "drivers/mbox/Kconfig.ti_secproxy"
+source "drivers/mbox/Kconfig.ti_am26x"
+
 
 config MBOX_INIT_PRIORITY
 	int "MBOX init priority"
