--- a/dts/arm/ti/am26x/am261x_r5f0_0.dtsi
+++ b/dts/arm/ti/am26x/am261x_r5f0_0.dtsi
@@ -25,7 +25,12 @@
 		zephyr,memory-region = "BTCM";
 	};
 
-	soc {
-		/delete-node/ gpio1;
+    soc {
+        /delete-node/ gpio1;
 	};
 };
+
+&mailbox0 {
+	core-id = <0>;
+};
+
