--- a/dts/arm/ti/am26x/am261x_r5f0_1.dtsi
+++ b/dts/arm/ti/am26x/am261x_r5f0_1.dtsi
@@ -26,7 +26,14 @@
 		zephyr,memory-region = "BTCM";
 	};
 
-	soc {
-		/delete-node/ gpio0;
-	};
+    soc {
+        /delete-node/ gpio0;
+
+    };
+};  
+
+&mailbox0 {
+	core-id = <1>;
 };
+
+
