--- a/boards/silabs/radio_boards/xg24/xg24_rb4187c-pinctrl.dtsi
+++ b/boards/silabs/radio_boards/xg24/xg24_rb4187c-pinctrl.dtsi
@@ -46,6 +46,14 @@
 		};
 	};
 
+	timer0_default: timer0_default {
+		group0 {
+			pins = <TIMER0_CC0_PB2>, <TIMER0_CC1_PB4>;
+			drive-push-pull;
+			output-low;
+		};
+	};
+
 	usart0_default: usart0_default {
 		group0 {
 			pins = <USART0_TX_PA8>;
