modules: mbedtls: use PSA for HMAC instead of MD
MD remains a public interface in the upcoming TF-PSA-Crypto 1.0 release,
but it still bring connections to legacy crypto and extra footprint
related to its wrapping functionalities. Since in most of the cases the
required hash algorithm is known, it's better to use the proper PSA
solution instead.

Unfortunately MBEDTLS_MD Kconfig cannot be deprecated as the other hash
related Kconfigs because it's still used in TLS.

This commit also adds a test for HMAC_SHA_256 (one of the functions that is
replaced in this commit) in "tests/crypto/mbedtls_psa".

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/tests/crypto/mbedtls_psa/prj.conf
+++ b/tests/crypto/mbedtls_psa/prj.conf
@@ -10,3 +10,6 @@ CONFIG_PSA_WANT_ALG_SHA_224=y
 CONFIG_PSA_WANT_ALG_SHA_256=y
 CONFIG_PSA_WANT_ALG_SHA_384=y
 CONFIG_PSA_WANT_ALG_SHA_512=y
+
+CONFIG_PSA_WANT_ALG_HMAC=y
+CONFIG_PSA_WANT_KEY_TYPE_HMAC=y
