--- a/samples/net/sockets/big_http_download/overlay-tls.conf
+++ b/samples/net/sockets/big_http_download/overlay-tls.conf
@@ -8,6 +8,8 @@ CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=65000
 CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=16384
 CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
+CONFIG_MBEDTLS_PSA_CRYPTO_C=y
+CONFIG_PSA_WANT_ALG_SHA_256=y
 
 CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 
