--- a/boards/arm/mps4/mps4_corstone320_fvp_ns.dts
+++ b/boards/arm/mps4/mps4_corstone320_fvp_ns.dts
@@ -11,6 +11,8 @@
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 #include <mem.h>
 
+#include "mps4_common_ns.dtsi"
+
 / {
 	compatible = "arm,mps4-fvp";
 	#address-cells = <1>;
@@ -20,7 +22,8 @@
 		zephyr,console = &uart0;
 		zephyr,shell-uart = &uart0;
 		zephyr,sram = &ram;
-		zephyr,flash = &code;
+		zephyr,flash = &reserved_memory;
+		zephyr,code-partition = &slot0_ns_partition;
 	};
 
 	cpus {
@@ -101,16 +104,6 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
-
-		/* The memory regions defined below must match what the TF-M
-		 * project has defined for that board - a single image boot is
-		 * assumed. Please see the memory layout in:
-		 * https://git.trustedfirmware.org/TF-M/trusted-firmware-m.git/tree/platform/ext/target/mps4/corstone320/common/partition/flash_layout.h
-		 */
-
-		code: memory@28080000 {
-			reg = <0x28080000 DT_SIZE_K(512)>;
-		};
 
 		ram: memory@21020000 {
 			reg = <0x21020000 DT_SIZE_M(1)>;
