samples: move pmci samples into samples/subsys/pmci
Move pmci samples under samples/subsys/pmci, given that pmci is a
subsystem in zephyr.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -4099,7 +4099,8 @@ PMCI:
     - kehintel
   files:
     - subsys/pmci/
-    - samples/modules/pmci/
+    - samples/subsys/pmci/
+    - include/zephyr/pmci/
   labels:
     - "area: PMCI"
 
