dts: pm: Add wakeup-signal property
This is a new property to specify the wakeup signal number.
There are some SoC's where the wakeup signal can be a different
signal and not necessarily the interrupt number.
This property goes together with wakeup-source.

Signed-off-by: Mahesh Mahadevan <mahesh.mahadevan@nxp.com>

--- a/dts/bindings/base/pm.yaml
+++ b/dts/bindings/base/pm.yaml
@@ -16,6 +16,16 @@ properties:
       Wake up capable devices are disabled (interruptions will not wake up
       the system) by default but they can be enabled at runtime if necessary.
 
+  wakeup-signal:
+    type: int
+    description: |
+      Property to specify the wakeup signal number.
+
+      There are some SoC's where the wakeup signal can be a different signal
+      and not necessarily the interrupt number.
+
+      This property goes together with "wakeup-source" property.
+
   zephyr,pm-device-runtime-auto:
     type: boolean
     description: |
