MAINTAINERS: add Instrumentation Subsystem
This commit adds an entry in MAINTAINERS.yml for the Instrumentation
Subsystem added in #91595.

Signed-off-by: Filip Kokosinski <fkokosinski@antmicro.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -2893,6 +2893,19 @@ Input:
     - drivers.input
     - input
 
+Instrumentation Subsystem:
+  status: maintained
+  maintainers:
+    - fkokosinski
+    - tgorochowik
+  files:
+    - include/zephyr/instrumentation/
+    - samples/subsys/instrumentation/
+    - scripts/instrumentation/
+    - subsys/instrumentation/
+  labels:
+    - "area: Instrumentation"
+
 Intel Platforms (Agilex):
   status: maintained
   maintainers:
