tests: mbedtls: remove crypto.mbedtls
The file "mbedtls.c" was copied from upstream Mbed TLS several years ago
and since then only minor fixes has been added when failing, no real
upgrade was made since then.

Reasons for removal include:
- some of the symbols were already removed (ex: MD2, MD4, RIPEMD160, ARC4, etc)
  but their testing was not removed;
- most of the code is guarded but "prj.conf" doesn't set any Kconfig related
  to the crypto features in Mbed TLS, so likely only the default ones are
  really tested;
- last but not least all of these "mbedtls_xxx_self_test()" function will
  disappear in the next TF-PSA-Crypto release so they cannot be maintained
  here.

This suite is replaced with tests in "zephyr/tests/crypto/mbedtls_psa".

"MAINTAINERS.yml" was also updated in this commit in order to reflect
this removal and add path for existing tests.

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -5857,7 +5857,8 @@ West:
     - ithinuel
   files:
     - modules/mbedtls/
-    - tests/crypto/mbedtls/
+    - tests/crypto/mbedtls_psa/
+    - tests/crypto/secp256r1/
     - tests/benchmarks/mbedtls/
   labels:
     - "area: mbedTLS / PSA Crypto"
