drivers: timer: Enable NXP LPTMR as wakeup-source
The NXP LPTMR uses the interrupt number or a dedicated
wakeup signal to wakeup the platform from low power
modes.

Signed-off-by: Mahesh Mahadevan <mahesh.mahadevan@nxp.com>

--- a/dts/arm/nxp/nxp_mcxw7x_common.dtsi
+++ b/dts/arm/nxp/nxp_mcxw7x_common.dtsi
@@ -301,6 +301,8 @@
 		prescaler = <1>;
 		resolution = <32>;
 		status = "disabled";
+		wakeup-source;
+		wakeup-signal = <0>;
 	};
 
 	lptmr1: timer@2e000 {
