dts: arm: st: fill out adc nodes with the new properties
Fill out all ADC nodes of all STM32 with the new properties that apply to
them.
Also moves the status at the end of each node.
Also fixes ADC2 and 3 nodes for STM32F103 and ADC3 node for STM32L471 that
were missing some required properties.

Signed-off-by: Guillaume Gautier <guillaume.gautier-ext@st.com>

--- a/dts/arm/st/f3/stm32f303.dtsi
+++ b/dts/arm/st/f3/stm32f303.dtsi
@@ -134,7 +134,6 @@
 			reg = <0x50000000 0x400>;
 			clocks = <&rcc STM32_CLOCK(AHB1, 28)>;
 			interrupts = <18 0>;
-			status = "disabled";
 			vref-mv = <3000>;
 			#io-channel-cells = <1>;
 			resolutions = <STM32_ADC_RES(12, 0x00)
@@ -144,6 +143,9 @@
 			sampling-times = <2 3 5 8 20 62 182 602>;
 			st,adc-sequencer = "FULLY_CONFIGURABLE";
 			st,adc-oversampler = "OVERSAMPLER_NONE";
+			st,adc-internal-regulator = "startup-sw-delay";
+			st,adc-has-differential-support;
+			status = "disabled";
 		};
 
 		adc2: adc@50000100 {
@@ -151,7 +153,6 @@
 			reg = <0x50000100 0x4c>;
 			clocks = <&rcc STM32_CLOCK(AHB1, 28)>;
 			interrupts = <18 0>;
-			status = "disabled";
 			vref-mv = <3000>;
 			#io-channel-cells = <1>;
 			resolutions = <STM32_ADC_RES(12, 0x00)
@@ -161,6 +162,9 @@
 			sampling-times = <2 3 5 8 20 62 182 602>;
 			st,adc-sequencer = "FULLY_CONFIGURABLE";
 			st,adc-oversampler = "OVERSAMPLER_NONE";
+			st,adc-internal-regulator = "startup-sw-delay";
+			st,adc-has-differential-support;
+			status = "disabled";
 		};
 	};
 
