--- a/dts/arm/st/h7/stm32h7.dtsi
+++ b/dts/arm/st/h7/stm32h7.dtsi
@@ -877,7 +877,6 @@
 			reg = <0x40022000 0x400>;
 			clocks = <&rcc STM32_CLOCK(AHB1, 5)>;
 			interrupts = <18 0>;
-			status = "disabled";
 			#io-channel-cells = <1>;
 			resolutions = <STM32_ADC_RES(16, 0x00)
 				       STM32_ADC_RES(14, 0x05)
@@ -887,6 +886,11 @@
 			sampling-times = <2 3 9 17 33 65 388 811>;
 			st,adc-sequencer = "FULLY_CONFIGURABLE";
 			st,adc-oversampler = "OVERSAMPLER_EXTENDED";
+			st,adc-internal-regulator = "startup-hw-status";
+			st,adc-has-deep-powerdown;
+			st,adc-has-channel-preselection;
+			st,adc-has-differential-support;
+			status = "disabled";
 		};
 
 		adc2: adc@40022100 {
@@ -894,7 +898,6 @@
 			reg = <0x40022100 0x400>;
 			clocks = <&rcc STM32_CLOCK(AHB1, 5)>;
 			interrupts = <18 0>;
-			status = "disabled";
 			#io-channel-cells = <1>;
 			resolutions = <STM32_ADC_RES(16, 0x00)
 				       STM32_ADC_RES(14, 0x05)
@@ -904,6 +907,11 @@
 			sampling-times = <2 3 9 17 33 65 388 811>;
 			st,adc-sequencer = "FULLY_CONFIGURABLE";
 			st,adc-oversampler = "OVERSAMPLER_EXTENDED";
+			st,adc-internal-regulator = "startup-hw-status";
+			st,adc-has-deep-powerdown;
+			st,adc-has-channel-preselection;
+			st,adc-has-differential-support;
+			status = "disabled";
 		};
 
 		/* dual mode: adc1 and adc2 coupled */
@@ -912,7 +920,6 @@
 			reg = <0x40022300 0x400>;
 			clocks = <&rcc STM32_CLOCK(AHB1, 5)>;
 			interrupts = <18 0>;
-			status = "disabled";
 			#io-channel-cells = <1>;
 			resolutions = <STM32_ADC_RES(16, 0x00)
 				       STM32_ADC_RES(14, 0x05)
@@ -922,6 +929,11 @@
 			sampling-times = <2 3 9 17 33 65 388 811>;
 			st,adc-sequencer = "FULLY_CONFIGURABLE";
 			st,adc-oversampler = "OVERSAMPLER_EXTENDED";
+			st,adc-internal-regulator = "startup-hw-status";
+			st,adc-has-deep-powerdown;
+			st,adc-has-channel-preselection;
+			st,adc-has-differential-support;
+			status = "disabled";
 		};
 
 		adc3: adc@58026000 {
@@ -929,7 +941,6 @@
 			reg = <0x58026000 0x400>;
 			clocks = <&rcc STM32_CLOCK(AHB4, 24)>;
 			interrupts = <127 0>;
-			status = "disabled";
 			#io-channel-cells = <1>;
 			resolutions = <STM32_ADC_RES(16, 0x00)
 				       STM32_ADC_RES(14, 0x05)
@@ -939,6 +950,11 @@
 			sampling-times = <2 3 9 17 33 65 388 811>;
 			st,adc-sequencer = "FULLY_CONFIGURABLE";
 			st,adc-oversampler = "OVERSAMPLER_EXTENDED";
+			st,adc-internal-regulator = "startup-hw-status";
+			st,adc-has-deep-powerdown;
+			st,adc-has-channel-preselection;
+			st,adc-has-differential-support;
+			status = "disabled";
 		};
 
 		dac1: dac@40007400 {
