testsuite: Make CONFIG_COVERAGE_DUMP_PATH_EXCLUDE depend on libc support
PR #94029 introduced a feature to filter out certain file paths from
coverage dumps using the `fnmatch` function. Unfortauntely, this
function is not universally implemented among all of Zephyr's libc
options, particularly minimal libc. This causes build failures when libc
support for `fnmatch()` is absent.

Update Kconfig with a `depends on` clause and a helper symbol that
guards the fnmatch header and function call when not enabled.

Signed-off-by: Tristan Honscheid <honscheid@google.com>

--- a/subsys/testsuite/Kconfig
+++ b/subsys/testsuite/Kconfig
@@ -95,9 +95,18 @@ config COVERAGE_DUMP
 
 endchoice
 
+config HAVE_COVERAGE_DUMP_PATH_EXCLUDE
+	bool
+	default y
+	depends on COVERAGE_DUMP_PATH_EXCLUDE != ""
+	help
+	  Helper symbol that is true when COVERAGE_DUMP_PATH_EXCLUDE is a
+	  non-empty string
+
 config COVERAGE_DUMP_PATH_EXCLUDE
 	string "Exclude files matching this pattern from the coverage data"
 	default ""
+	depends on !MINIMAL_LIBC
 	help
 	  Filenames are matched against the pattern using the POSIX fnmatch
 	  function. Filenames are based on their path in the build folder, not the
