charger: bq2518x: restrict precharge values in devicetree
Instead of text in the description that specifies the valid values,
add the `enum` property so values are validated at compile time.

Signed-off-by: Jordan Yates <jordan@embeint.com>

--- a/dts/bindings/charger/ti,bq2518x-common.yaml
+++ b/dts/bindings/charger/ti,bq2518x-common.yaml
@@ -22,7 +22,9 @@ properties:
 
   precharge-voltage-threshold-microvolt:
     type: int
+    enum:
+      - 2800000
+      - 3000000
     default: 3000000
     description: |
       Threshold at which voltage to switch to constant current charge.
-      Must be either 3.0V or 2.8V
