charger: bq2518x: more configuration options
Add configuration for the VSYS target regulation voltage.

Explicitly specify the threshold at which charging will resume, instead
of deriving it from the combination of two devicetree properties which
have no compile-time validation.

Simplify the process of initialising the chip by precomputing the
register values and explicitly writing the whole register, instead of
updating multiple fields individually.

Signed-off-by: Jordan Yates <jordan@embeint.com>

--- a/tests/drivers/build_all/charger/i2c.dtsi
+++ b/tests/drivers/build_all/charger/i2c.dtsi
@@ -48,6 +48,8 @@ bq25186@3 {
 	reg = <0x3>;
 	constant-charge-current-max-microamp = <500000>;
 	constant-charge-voltage-max-microvolt = <4200000>;
+	re-charge-threshold-millivolt = <200>;
+	vsys-target-regulation = "Vin Passthrough";
 };
 
 bq25188@4 {
@@ -55,6 +57,7 @@ bq25188@4 {
 	reg = <0x4>;
 	constant-charge-current-max-microamp = <500000>;
 	constant-charge-voltage-max-microvolt = <4200000>;
+	vsys-target-regulation = "Battery Tracking";
 };
 
 sbs-charger@5 {
