--- a/dts/bindings/charger/ti,bq2518x-common.yaml
+++ b/dts/bindings/charger/ti,bq2518x-common.yaml
@@ -20,6 +20,17 @@ properties:
       The maximum voltage that the battery will be charged at, defaults to
       4.2V, matching the device default reset configuration.
 
+  re-charge-threshold-millivolt:
+    type: int
+    enum:
+      - 100
+      - 200
+    default: 100
+    description: |
+      The voltage below the maximum charge voltage at which the battery will
+      resume charging after falling from the max. Defaults to 100 mV, matching
+      the device default reset configuration.
+
   precharge-voltage-threshold-microvolt:
     type: int
     enum:
@@ -28,3 +39,19 @@ properties:
     default: 3000000
     description: |
       Threshold at which voltage to switch to constant current charge.
+
+  vsys-target-regulation:
+    type: string
+    enum:
+      - "Battery Tracking"
+      - "4V4"
+      - "4V5"
+      - "4V6"
+      - "4V7"
+      - "4V8"
+      - "4V9"
+      - "Vin Passthrough"
+    default: "4V5"
+    description: |
+      Target voltage for the SYS regulation loop. Defaults to 4.5V, matching
+      the device default reset configuration.
