--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -5614,6 +5614,8 @@ West:
     - soburi
     - duynguyenxa
     - thaoluonguw
+    - binhnguyen2434
+    - nhutnguyenkc
   files: []
   labels:
     - "platform: Renesas"
