MAINTANERS: Update hal_renesas collaborator
Add binhnguyen2434 and nhutnguyenkc as collaborator for
HAL Renesas repo.

Signed-off-by: Binh Nguyen <binh.nguyen.xw@renesas.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -5612,6 +5612,8 @@ West:
     - soburi
     - duynguyenxa
     - thaoluonguw
+    - binhnguyen2434
+    - nhutnguyenkc
   files: []
   labels:
     - "platform: Renesas"
