--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3623,6 +3623,8 @@ Native_sim and POSIX arch:
   status: maintained
   maintainers:
     - aescolar
+  collaborators:
+    - tpambor
   files:
     - arch/posix/
     - boards/native/common/
