boards: silabs: Add xgm240_rb4316a and xgm240_rb4317a
Add support for xGM240-RB4316A and xGM240-RB4317A radio boards
for xGM240 modules. The two boards share pinout configuration, but
have different radio and power configurations.

Signed-off-by: Aksel Skauge Mellbye <aksel.mellbye@silabs.com>

--- a/boards/silabs/radio_boards/xg24/board.yml
+++ b/boards/silabs/radio_boards/xg24/board.yml
@@ -9,3 +9,13 @@ boards:
     vendor: silabs
     socs:
       - name: efr32mg24b220f1536im48
+  - name: xgm240_rb4316a
+    full_name: xGM240P 10 dBm Module Radio Board (xGM240-RB4316A)
+    vendor: silabs
+    socs:
+      - name: mgm240pb22vna
+  - name: xgm240_rb4317a
+    full_name: xGM240P 20 dBm Module Radio Board (xGM240-RB4317A)
+    vendor: silabs
+    socs:
+      - name: mgm240pb32vna
