--- a/dts/arm/silabs/xg24/bgm240pb32vna.dtsi
+++ b/dts/arm/silabs/xg24/bgm240pb32vna.dtsi
@@ -1,7 +1,5 @@
 /*
- * Copyright (c) 2023 Fr. Sauter AG
  * Copyright (c) 2025 Silicon Laboratories Inc.
- * Copyright (c) 2025 Ephraim Westenberger
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -12,13 +10,13 @@
 
 / {
 	soc {
-		compatible = "silabs,bgm240sa22vna", "silabs,bgm24", "silabs,xg24", "silabs,efr32",
+		compatible = "silabs,bgm240pb32vna", "silabs,bgm24", "silabs,xg24", "silabs,efr32",
 			     "simple-bus";
 	};
 };
 
 &dcdc {
-	silabs,pfmx-peak-current-milliamp = <80>;
+	silabs,pfmx-peak-current-milliamp = <50>;
 };
 
 &flash0 {
@@ -33,10 +31,6 @@
 
 &lfrco {
 	precision-mode;
-};
-
-&radio {
-	pa-voltage-mv = <1800>;
 };
 
 &sram0 {
