--- a/dts/arm/silabs/xg24/bgm240sb22vna.dtsi
+++ b/dts/arm/silabs/xg24/bgm240sb22vna.dtsi
@@ -1,7 +1,5 @@
 /*
- * Copyright (c) 2023 Fr. Sauter AG
  * Copyright (c) 2025 Silicon Laboratories Inc.
- * Copyright (c) 2025 Ephraim Westenberger
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -12,7 +10,7 @@
 
 / {
 	soc {
-		compatible = "silabs,bgm240sa22vna", "silabs,bgm24", "silabs,xg24", "silabs,efr32",
+		compatible = "silabs,bgm240sb22vna", "silabs,bgm24", "silabs,xg24", "silabs,efr32",
 			     "simple-bus";
 	};
 };
