--- a/dts/arm/silabs/xg24/mgm240pa22vna.dtsi
+++ b/dts/arm/silabs/xg24/mgm240pa22vna.dtsi
@@ -1,18 +1,16 @@
 /*
- * Copyright (c) 2023 Fr. Sauter AG
  * Copyright (c) 2025 Silicon Laboratories Inc.
- * Copyright (c) 2025 Ephraim Westenberger
  *
  * SPDX-License-Identifier: Apache-2.0
  */
 
 #include <mem.h>
-#include <silabs/xg24/bgm24.dtsi>
+#include <silabs/xg24/mgm24.dtsi>
 #include <zephyr/dt-bindings/regulator/silabs_dcdc.h>
 
 / {
 	soc {
-		compatible = "silabs,bgm240sa22vna", "silabs,bgm24", "silabs,xg24", "silabs,efr32",
+		compatible = "silabs,mgm240pa22vna", "silabs,mgm24", "silabs,xg24", "silabs,efr32",
 			     "simple-bus";
 	};
 };
