--- a/dts/arm/silabs/xg24/mgm240pb32vnn.dtsi
+++ b/dts/arm/silabs/xg24/mgm240pb32vnn.dtsi
@@ -1,24 +1,22 @@
 /*
- * Copyright (c) 2023 Fr. Sauter AG
  * Copyright (c) 2025 Silicon Laboratories Inc.
- * Copyright (c) 2025 Ephraim Westenberger
  *
  * SPDX-License-Identifier: Apache-2.0
  */
 
 #include <mem.h>
-#include <silabs/xg24/bgm24.dtsi>
+#include <silabs/xg24/mgm24.dtsi>
 #include <zephyr/dt-bindings/regulator/silabs_dcdc.h>
 
 / {
 	soc {
-		compatible = "silabs,bgm240sa22vna", "silabs,bgm24", "silabs,xg24", "silabs,efr32",
+		compatible = "silabs,mgm240pb32vnn", "silabs,mgm24", "silabs,xg24", "silabs,efr32",
 			     "simple-bus";
 	};
 };
 
 &dcdc {
-	silabs,pfmx-peak-current-milliamp = <80>;
+	silabs,pfmx-peak-current-milliamp = <50>;
 };
 
 &flash0 {
@@ -33,10 +31,6 @@
 
 &lfrco {
 	precision-mode;
-};
-
-&radio {
-	pa-voltage-mv = <1800>;
 };
 
 &sram0 {
