drivers: stepper: adi_tmc: wip
trinamic common comm bus

Signed-off-by: Dipak Shetty <shetty.dipak@gmx.com>

--- a/drivers/stepper/adi_tmc/bus/CMakeLists.txt
+++ b/drivers/stepper/adi_tmc/bus/CMakeLists.txt
@@ -3,5 +3,9 @@
 
 zephyr_library_include_directories(include)
 
+# Generic bus adapter
+zephyr_library_sources(adi_tmc_bus.c)
+
+# Low-level bus implementations
 zephyr_library_sources_ifdef(CONFIG_STEPPER_ADI_TMC_SPI adi_tmc_spi.c)
 zephyr_library_sources_ifdef(CONFIG_STEPPER_ADI_TMC_UART adi_tmc_uart.c)
