--- a/soc/nxp/mcx/soc.yml
+++ b/soc/nxp/mcx/soc.yml
@@ -23,6 +23,7 @@ family:
   - name: mcxa346
   - name: mcxa266
   - name: mcxa366
+  - name: mcxa344
 - name: mcxw
   series:
   - name: mcxw2xx
@@ -70,6 +71,8 @@ runners:
         - mcxw716c
       - qualifiers:
         - mcxw236
+      - qualifiers:
+        - mcxa344
     '--reset':
     - run: last
       runners:
@@ -102,3 +105,5 @@ runners:
         - mcxw716c
       - qualifiers:
         - mcxw236
+      - qualifiers:
+        - mcxa344
