MAINTAINERS: Add a collaborator for Microchip SAM
Add ArunMCHP as collaborator for Microchip SAM devices from vendor.

Signed-off-by: Niyas Hameed <niyas.hameed@microchip.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3353,6 +3353,7 @@ Microchip SAM Platforms:
   maintainers:
     - nandojve
   collaborators:
+    - ArunMCHP
     - pdgendt
     - stephanosio
   files:
