--- a/tests/bluetooth/tester/boards/native_sim.conf
+++ b/tests/bluetooth/tester/boards/native_sim.conf
@@ -1,6 +1,7 @@
 CONFIG_UART_PIPE=n
 CONFIG_SERIAL=y
 CONFIG_UART_NATIVE_PTY=y
+CONFIG_LOG_BACKEND_SHOW_COLOR=n
 
 CONFIG_BT_BUF_CMD_TX_COUNT=8
 CONFIG_BT_BUF_EVT_DISCARDABLE_COUNT=3
