arch: riscv: custom: add T-Head Xuantie CSR support
Move Xuantie supprot from arch/riscv/core/xuantie to the custom common
layer arch/riscv/custom/thead, with the following changes:

1. Rename Kconfig name
   CACHE_XTHEADCMO -> RISCV_CUSTOM_CSR_THEAD_CMO
2. Split the original arch/riscv/core/xuantie/Kconfig to
   a. arch/riscv/custom/thead/Kconfig: for T-Head extension
   b. arch/riscv/custom/thead/Kconfig.core: for T-Head CPU series
      (e.g. Xuantie E907)
3. Move cache line size defaults to SoC devicetree

Signed-off-by: Jimmy Zheng <jimmyzhe@andestech.com>

--- a/arch/riscv/custom/Kconfig
+++ b/arch/riscv/custom/Kconfig
@@ -6,3 +6,10 @@ if DT_HAS_ANDESTECH_ANDESCORE_V5_ENABLED
 rsource "andes/Kconfig"
 
 endif # DT_HAS_ANDESTECH_ANDESCORE_V5_ENABLED
+
+if DT_HAS_XUANTIE_E907_ENABLED
+
+rsource "thead/Kconfig"
+rsource "thead/Kconfig.core"
+
+endif # DT_HAS_XUANTIE_E907_ENABLED
