--- a/drivers/sensor/st/CMakeLists.txt
+++ b/drivers/sensor/st/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory_ifdef(CONFIG_LSM6DS0 lsm6ds0)
 add_subdirectory_ifdef(CONFIG_LSM6DSL lsm6dsl)
 add_subdirectory_ifdef(CONFIG_LSM6DSO lsm6dso)
 add_subdirectory_ifdef(CONFIG_LSM6DSO16IS lsm6dso16is)
+add_subdirectory_ifdef(CONFIG_LSM6DSR lsm6dsr)
 add_subdirectory_ifdef(CONFIG_LSM6DSV16X lsm6dsv16x)
 add_subdirectory_ifdef(CONFIG_LSM9DS0_GYRO lsm9ds0_gyro)
 add_subdirectory_ifdef(CONFIG_LSM9DS0_MFD lsm9ds0_mfd)
