--- a/drivers/sensor/st/Kconfig
+++ b/drivers/sensor/st/Kconfig
@@ -29,6 +29,7 @@ source "drivers/sensor/st/lsm6ds0/Kconfig"
 source "drivers/sensor/st/lsm6dsl/Kconfig"
 source "drivers/sensor/st/lsm6dso/Kconfig"
 source "drivers/sensor/st/lsm6dso16is/Kconfig"
+source "drivers/sensor/st/lsm6dsr/Kconfig"
 source "drivers/sensor/st/lsm6dsv16x/Kconfig"
 source "drivers/sensor/st/lsm9ds0_gyro/Kconfig"
 source "drivers/sensor/st/lsm9ds0_mfd/Kconfig"
