--- a/boards/silabs/explorer_kits/xg22/xg22_ek2710a.yaml
+++ b/boards/silabs/explorer_kits/xg22/xg22_ek2710a.yaml
@@ -1,5 +1,5 @@
 identifier: xg22_ek2710a
-name: EFR32xG22 Explorer Kit (xG22-EK2710A, BRD2710A)
+name: EFR32xG22E Explorer Kit (xG22-EK2710A, BRD2710A)
 type: mcu
 arch: arm
 ram: 32
