boards: silabs: Add bg22 explorer kit
Add bg22_ek4108a board definition for the EFR32BG22 Explorer Kit.
The board has similar pinout to the other xg22 explorer kits.

Signed-off-by: Aksel Skauge Mellbye <aksel.mellbye@silabs.com>

--- a/boards/silabs/explorer_kits/xg22/board.yml
+++ b/boards/silabs/explorer_kits/xg22/board.yml
@@ -4,6 +4,11 @@ boards:
     vendor: silabs
     socs:
       - name: bgm220pc22hna
+  - name: bg22_ek4108a
+    full_name: EFR32BG22 Explorer Kit (BG22-EK4108A)
+    vendor: silabs
+    socs:
+      - name: efr32bg22c224f512im40
   - name: xg22_ek2710a
     full_name: EFR32xG22E Explorer Kit (xG22-EK2710A)
     vendor: silabs
