--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -38,6 +38,7 @@ source "drivers/regulator/Kconfig.npm1100"
 source "drivers/regulator/Kconfig.npm13xx"
 source "drivers/regulator/Kconfig.npm2100"
 source "drivers/regulator/Kconfig.npm6001"
+source "drivers/regulator/Kconfig.nrf_vregusb"
 source "drivers/regulator/Kconfig.pca9420"
 source "drivers/regulator/Kconfig.pca9422"
 source "drivers/regulator/Kconfig.pf1550"
