drivers: udc: use regulator driver in DWC2 nRF54LM20A vendor quirks
Use Nordic VREGUSB regulator driver in DWC2 nRF54LM20A vendor quirks.

Signed-off-by: Johann Fischer <johann.fischer@nordicsemi.no>

--- a/boards/nordic/nrf54lm20dk/nrf54lm20a_cpuapp_common.dtsi
+++ b/boards/nordic/nrf54lm20dk/nrf54lm20a_cpuapp_common.dtsi
@@ -51,6 +51,10 @@
 	regulator-initial-mode = <NRF5X_REG_MODE_DCDC>;
 };
 
+&vregusb {
+	status = "okay";
+};
+
 &grtc {
 	owned-channels = <0 1 2 3 4 5 6 7 8 9 10 11>;
 	/* Channels 7-11 reserved for Zero Latency IRQs, 3-4 for FLPR */
