--- a/samples/net/wifi/apsta_mode/Kconfig
+++ b/samples/net/wifi/apsta_mode/Kconfig
@@ -5,24 +5,28 @@ mainmenu "Network Wi-Fi apsta_mode application"
 
 config WIFI_SAMPLE_AP_SSID
 	string "SSID of soft AP"
+	default "Zephyr-AP"
 	help
 	  SSID of the soft AP created by the sample.
 	  Fox example: "SOFT-AP"
 
 config WIFI_SAMPLE_AP_PSK
 	string "Pre-shared key for soft AP"
+	default ""
 	help
 	  WPA2 password used by the soft AP for client authentication.
 	  For example: "PSK"
 
 config WIFI_SAMPLE_SSID
 	string "SSID of the target AP"
+	default "SSID"
 	help
 	  SSID of the access point to connect to in station mode.
 	  For example: "TARGET-AP"
 
 config WIFI_SAMPLE_PSK
 	string "Pre-shared key for target AP"
+	default "PASSWORD"
 	help
 	  WPA2 password used to connect to the target AP.
 	  For example: "PSK"
@@ -49,12 +53,14 @@ if WIFI_SAMPLE_DHCPV4_START
 
 config WIFI_SAMPLE_AP_IP_ADDRESS
 	string "IP address of soft AP"
+	default "192.168.4.1"
 	help
 	  IP address assigned to the soft AP interface.
 	  For example: "192.168.4.1"
 
 config WIFI_SAMPLE_AP_NETMASK
 	string "Netmask of soft AP"
+	default "255.255.255.0"
 	help
 	  Subnet mask for the soft AP interface.
 	  For example: "255.255.255.0"
