MAINTAINERS: add maintainer for Realtek EC api and driver
This commit adds maintainers of Realtek EC to maintainers.yml

Signed-off-by: Elmo Lan <elmo_lan@realtek.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -4306,6 +4306,11 @@ Realtek EC Platforms:
   status: maintained
   maintainers:
     - JasonLin-RealTek
+  collaborators:
+    - elmo9999
+    - benson0715
+    - JhanBoChao-Realtek
+    - Titan-Realtek
   files:
     - boards/realtek/
     - drivers/*/*rts5912*
