--- a/boards/arduino/uno_q/arduino_uno_q.yaml
+++ b/boards/arduino/uno_q/arduino_uno_q.yaml
@@ -7,4 +7,19 @@ toolchain:
   - gnuarmemb
 ram: 786
 flash: 2048
+supported:
+  - arduino_i2c
+  - arduino_spi
+  - hts221
+  - dma
+  - spi
+  - dac
+  - adc
+  - watchdog
+  - nvs
+  - pwm
+  - counter
+  - i2c
+  - rtc
+# - usbd # enable usbotg_fs in DTS
 vendor: arduino
