dts: arm: sifli: sf32lb52x: define reset
Add node for Reset peripheral

Signed-off-by: Qingsong Gou <gouqs@hotmail.com>

--- a/dts/arm/sifli/sf32lb52x.dtsi
+++ b/dts/arm/sifli/sf32lb52x.dtsi
@@ -87,6 +87,11 @@
 					status = "disabled";
 				};
 			};
+
+			rcc_rst: reset-controller {
+				compatible = "sifli,sf32lb-rcc-rctl";
+				#reset-cells = <1>;
+			};
 		};
 
 		pinctrl: pinctrl@50003000 {
