modules: openthread: platform: Add support to query for PTR & SRV records
This commit enhances DNS upstream resolver functionality by adding
support to query for PTR and SRV records.

Signed-off-by: Cristian Bulacu <cristian.bulacu@nxp.com>

--- a/samples/net/openthread/border_router/prj.conf
+++ b/samples/net/openthread/border_router/prj.conf
@@ -76,6 +76,7 @@ CONFIG_DNS_RESOLVER=y
 CONFIG_DNS_RESOLVER_PACKET_FORWARDING=y
 CONFIG_DNS_RESOLVER_MAX_SERVERS=2
 CONFIG_DNS_NUM_CONCUR_QUERIES=8
+CONFIG_DNS_RESOLVER_MAX_NAME_LEN=128
 
 # OT Border Router flags
 CONFIG_OPENTHREAD_BACKBONE_ROUTER_MULTICAST_ROUTING=y
