--- a/west.yml
+++ b/west.yml
@@ -210,7 +210,7 @@ manifest:
       groups:
         - hal
     - name: hal_nxp
-      revision: 4377ecfba52fe0ff7352eadf426b523ed3e1d27f
+      revision: pull/621/head
       path: modules/hal/nxp
       groups:
         - hal
