dts: nordic: use phandle to reference VREGUSB regulator
PHY and controller function depends on VREGUSB. Add VREGUSB regulator
node to nRF54LM20A and use phandle to reference it in the wrapper node.

Signed-off-by: Johann Fischer <johann.fischer@nordicsemi.no>

--- a/dts/bindings/usb/nordic,nrf-usbhs-wrapper.yaml
+++ b/dts/bindings/usb/nordic,nrf-usbhs-wrapper.yaml
@@ -10,3 +10,9 @@ include: [base.yaml]
 properties:
   reg:
     required: true
+
+  regulator:
+    required: true
+    type: phandle
+    description: |
+      USB PHY and controller function depends on the USB regulator VREGUSB.
